[metadata]
name = py-miraie-ac
version = 0.0.6
author = Milo Thomas
author_email = 20719501+milothomas@users.noreply.github.com
description = A package to control and read MirAIe Aircons by Panasonic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/milothomas/py-miraie-ac
project_urls =
    Bug Tracker = https://github.com/milothomas/py-miraie-ac/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src